# readwise-sync

./: .env.example  .gitignore  .rw-sync.example.yaml  .syncthing..gitignore.tmp  README.md  data  pyproject.toml  rw_sync_push_new.sh
data.bak-20251013-171718/failures/20251001/: failed_urls.csv
data.bak-20251013-171718/failures/20251002/: failed_urls.csv
data.bak-20251013-171718/failures/20251003/: failed_urls.csv
data.bak-20251013-171718/failures/20251006/: failed_urls.csv
data.bak-20251013-171718/state (MacBook Pro's conflicted copy 2025-10-13)/: rw_sync (Nice的Mac mini's conflicted copy 2025-10-10).db  rw_sync.db
docs/: PLAN.md  note.md
src/reader_sync/: __init__.py  cli.py  config.py  database.py  failures.py  filesystem.py  html_utils.py  logging_setup.py  models.py  readwise_client.py  sync.py  title_fetcher.py
tests/: test_config.py  test_failures.py  test_html_utils.py
